# swagger_output.json
@@ -77,6 +77,24 @@
         }
       }
     },
+    "/auth/verify/{token}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/project/create": {
       "post": {
         "description": "",
@@ -96,9 +114,6 @@
                   "example": "any"
                 },
                 "projectDescription": {
-                  "example": "any"
-                },
-                "createdBy": {
                   "example": "any"
                 }
               }
@@ -173,16 +188,10 @@
         }
       }
     },
-    "/project/getProjectByUserId/{userId}": {
+    "/project/getProjectByUser": {
       "get": {
         "description": "",
         "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "authorization",
             "in": "header",
@@ -239,6 +248,59 @@
           },
           "409": {
             "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/project/updateProject/{projectId}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "projectName": {
+                  "example": "any"
+                },
+                "projectDescription": {
+                  "example": "any"
+                },
+                "isCompleted": {
+                  "example": "any"
+                },
+                "projectMembers": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
